--- a/app/views/public/favorites/index.html.erb
+++ b/app/views/public/favorites/index.html.erb
@@ -1,2 +1,35 @@
-<h1>Public::Favorites#index</h1>
-<p>Find me in app/views/public/favorites/index.html.erb</p>
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-12">
+      <h3>食べたい投稿一覧</h3>
+      <div class="d-flex flex-wrap mt-3">
+        <% @favorite_posts.each do |post| %>
+          <div class="col-2 mr-1 mb-2">
+            <% if post.user.is_active == true %>
+              <% if post.image.attached? %>
+                <%= link_to (image_tag post.image, size: "160x120"), post_path(post) %>
+              <% else %>
+                <%= link_to (image_tag 'no_image.jpg', size: "160x120"), post_path(post) %>
+              <% end %></br>
+              <%= link_to post.dish, post_path(post), class: "text-dark" %></br>
+
+              <% if post.user.image.attached? %>
+                <%= link_to (image_tag post.user.image, size: "30x30"), user_path(post.user_id) %>
+              <% else %>
+                <%= link_to (image_tag 'user_no_image.jpg', size: "30x30"), user_path(post.user_id) %>
+              <% end %>
+              <%= link_to post.user.name, user_path(post.user_id), class: "text-dark" %>
+            <% else %>
+              <% if post.image.attached? %>
+                <%= link_to (image_tag post.image, size: "160x120"), post_path(post) %>
+              <% else %>
+                <%= link_to (image_tag 'no_image.jpg', size: "160x120"), post_path(post) %>
+              <% end %></br>
+              <%= link_to post.dish, post_path(post), class: "text-dark" %></br>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
