--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -33,6 +33,9 @@
           <%= render 'public/comments/counter', post: @post %>
           <br><span class="text-secondary">comment</span>
         </div>
+        <div id="favorite_btn_<%= @post.id %>" class="mx-2">
+          <%= render 'public/favorites/link', post: @post %>
+        </div>
       </div>
     </div>
   <% end %>
