--- a/app/views/public/genres/_search.html.erb
+++ b/app/views/public/genres/_search.html.erb
@@ -1,8 +1,6 @@
-<span><%= link_to "全商品を表示", items_path, class:"mx-2" %></span>
-      <% genres.each do |genre| %>
-        <tr>
-          <td>
-            <%= link_to genre.name, genre_path(genre.id), class:"ec-genre-list-item" %>
-          </td>
-        </tr>
-        <% end %>
+<div class="text-center">
+  <span><%= link_to "全て", posts_path, class:"mx-2" %></span>
+  <% genres.each do |genre| %>
+  <span><%= link_to genre.name, genre_path(genre), class:"mx-2" %></span>
+  <% end %>
+</div>
