--- a/app/views/public/genres/show.html.erb
+++ b/app/views/public/genres/show.html.erb
@@ -1,6 +1,8 @@
 <div class="container mt-3 mb-5">
   <div class="row">
     <div class="col-12">
+      <%= render "public/genres/search", genres: @genres %>
+      <h3><%= @genre.name %></h3>
       <div class="d-flex flex-wrap mt-3">
         <% @genre.posts.each do |post| %>
           <div class="col-2 mr-1 mb-2">
@@ -11,7 +13,7 @@
                 <%= link_to (image_tag 'no_image.jpg', size: "160x120"), post_path(post) %>
               <% end %></br>
               <%= link_to post.dish, post_path(post), class: "text-dark" %></br>
-      
+
               <% if post.user.image.attached? %>
                 <%= link_to (image_tag post.user.image, size: "30x30"), user_path(post.user_id) %>
               <% else %>
@@ -30,8 +32,5 @@
         <% end %>
       </div>
     </div>
-  </div>
-  <div class="row justify-content-center mt-3">
-    <div><%= paginate @posts %></div>
   </div>
 </div>
